crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__hour__multiple__range_periodic__all.snap
---
source: crates/tools/cron/src/tests/unit/hour.rs
expression: result
---
Ok(
    (
        "",
        HourRule {
            kinds: [
                HourKind {
                    range: (
                        Hour(
                            1,
                        ),
                        Hour(
                            23,
                        ),
                    ),
                    periodic: HourPeriodic(
                        2,
                    ),
                },
                HourKind {
                    range: (
                        Hour(
                            0,
                        ),
                        Hour(
                            23,
                        ),
                    ),
                    periodic: HourPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
