crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__hour__multiple__range_periodic__specifier_periodic.snap
---
source: crates/tools/cron/src/tests/unit/hour.rs
expression: result
---
Ok(
    (
        ",1/2",
        HourRule {
            kinds: [
                HourKind {
                    range: (
                        Hour(
                            1,
                        ),
                        Hour(
                            23,
                        ),
                    ),
                    periodic: HourPeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
